Added a query to the google maps url due to caching issues.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="config.js"></script>
     <script async>
         const script = document.createElement('script');
-        script.src = `https://maps.googleapis.com/maps/api/js?key=${API_KEY}&libraries=places`;
+        script.src = `https://maps.googleapis.com/maps/api/js?key=${API_KEY}&libraries=places&callback=initializeAutocomplete&v=weekly`;
         script.async = true;
         script.defer = true;
         document.head.appendChild(script);
