--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="calculator-container">
-        <h1>Dog Transport Calculator</h1>
+        <h1>Pet Transport Calculator</h1>
 
         <form id="transport-form">
             <label for="num-animals">Number of Animals:</label>
@@ -32,21 +32,20 @@
 
             <label for="services">Service:</label>
             <select id="services" required>
-                <option value="shared-ride">Shared Ride (4 day delivery)</option>
-                <option value="semi-private-ride">Semi Private Ride (3 day delivery)</option>
-                <option value="private-ride">Private Ride (2 day delivery)</option>
-                <option value="private-ride-two-drivers">Private Ride Two Drivers (1 day delivery)</option>
+                <option value="shared-ride">Shared Ride (4 day pick up window)</option>
+                <option value="semi-private-ride">Semi Private Ride (3 day pick up window)</option>
+                <option value="private-ride">Private Ride (2 day pick up window)</option>
+                <option value="private-ride-two-drivers">Private Ride Two Drivers (1 day pick up window)</option>
             </select>
 
             <label for="pickup-window">Pick-Up Window:</label>
             <input type="date" id="pickup-window" min="" max="" required>
 
-            <label for="dropoff-window">Drop-Off Window:</label>
-            <input type="date" id="dropoff-window" min="" max="" required>
+            <p id="dropoff-window-display">Select a pick-up date and service to see the drop-off window.</p>
 
             <h2>500 Mile Minimum</h2>
             <label for="pickup-address">Pick-Up Address:</label>
-            <input type="text" id="pickup-address" placeholder="Enter pick-up address" required>
+            <input type="text" id="pickup-address" placeholder="Enter pick-up address or zipcode" required>
 
             <label for="dropoff-address">Drop-Off Address:</label>
             <input type="text" id="dropoff-address" placeholder="Enter drop-off address" required>
