--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <label for="pickup-window">Pick-Up Window:</label>
             <input type="date" id="pickup-window" min="" max="" required>
 
-            <p id="dropoff-window-display">Select a pick-up date and service to see the drop-off window.</p>
+            <p id="dropoff-window-display">Select a pick-up date and service to see the pick-up window end.</p>
 
             <h2>500 Mile Minimum</h2>
             <label for="pickup-address">Pick-Up Address:</label>
